--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "1.15.6",
     "helmet": "1.1.0",
     "http-errors": "~1.6.2",
+    "jquery": "3.4.1",
     "morgan": "~1.9.0",
     "passport": "0.4.0",
     "passport-twitter": "1.0.4",
